--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "normalize-scss": "~2.1.0",
     "modernizr": "~2.6.2",
-    "jquery": "~1.9.1",
-    "jquery.easing": "~1.3.0"
+    "jquery": "~1.9.1"
   }
 }
